--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
         config: {
             backend: {
                 name: 'github',
-                repo: 'seu-usuario/seu-repositorio',  // Substitua por seu usuário e repositório GitHub
-                branch: 'main', // A branch onde o site está hospedado
+                repo: 'Franklinsiltol/FreeFlow',  // Nome do usuário e repositório GitHub
+                branch: 'main', // Branch onde o site está hospedado
             },
             media_folder: "images/uploads", // Onde os arquivos de mídia vão ser armazenados
             public_folder: "/images/uploads", // Onde os arquivos serão acessados publicamente
